# src/whatsapp/dto/instance.dto.ts
@@ -14,12 +14,16 @@ export class InstanceDto {
   always_online?: boolean;
   read_messages?: boolean;
   read_status?: boolean;
+  sync_full_history?: boolean;
   chatwoot_account_id?: string;
   chatwoot_token?: string;
   chatwoot_url?: string;
   chatwoot_sign_msg?: boolean;
   chatwoot_reopen_conversation?: boolean;
   chatwoot_conversation_pending?: boolean;
+  chatwoot_import_contacts?: boolean;
+  chatwoot_import_messages?: boolean;
+  chatwoot_days_limit_import_messages?: number;
   websocket_enabled?: boolean;
   websocket_events?: string[];
   rabbitmq_enabled?: boolean;
