# src/whatsapp/models/chatwoot.model.ts
@@ -14,6 +14,9 @@ export class ChatwootRaw {
   number?: string;
   reopen_conversation?: boolean;
   conversation_pending?: boolean;
+  import_contacts?: boolean;
+  import_messages?: boolean;
+  days_limit_import_messages?: number;
 }
 
 const chatwootSchema = new Schema<ChatwootRaw>({
@@ -28,6 +31,9 @@ const chatwootSchema = new Schema<ChatwootRaw>({
   number: { type: String, required: true },
   reopen_conversation: { type: Boolean, required: true },
   conversation_pending: { type: Boolean, required: true },
+  import_contacts: { type: Boolean, required: true },
+  import_messages: { type: Boolean, required: true },
+  days_limit_import_messages: { type: Number, required: true },
 });
 
 export const ChatwootModel = dbserver?.model(ChatwootRaw.name, chatwootSchema, 'chatwoot');
